# liminara

./: .dockerignore  .gitignore  .gitmodules  .tool-versions  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  metrics.json  sync.sh
.ai/: GUIDE.md  paths.md  rules.md  setup.sh  sync.sh  update.sh
.ai-repo/: README.md  statusline.sh
.ai-repo/config/: artifact-layout.json  commit.json
.ai-repo/recipes/: dead-code-elixir.md  dead-code-python.md
.ai-repo/rules/: contract-design.md  liminara.md  paths-override.md  tdd-conventions.md
.ai-repo/scratch/: .gitignore
.ai-repo/skills/: app-legibility.md  design-contract.md  devcontainer.md  plan-milestones.md
.ai/agents/: builder.md  coordinator.md  reviewer.md
.ai/docs/: guide.md  squad-comparison.md  squad-inspired-roadmap.md
.ai/scripts/: extract-session-conversation.mjs
.ai/skills/: review-code.md  tdd-cycle.md
.ai/templates/: epic-spec.md  milestone-spec.md  tracking-doc.md
.claude/: settings.json
.codex/: instructions.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
agents/: deployer.md  planner.md
bench/: README.md  package-lock.json  package.json
docs/: index.md  liminara.md  log.md  migration-v1.md
integrations/python/: .gitignore  README.md  pyproject.toml
integrations/python/examples/01_raw_python/: README.md  demo.py  llm.py  pipeline_instrumented.py  pipeline_raw.py
integrations/python/examples/02_langchain/: README.md  run.py  setup_index.py
integrations/python/liminara/: __init__.py  artifact_store.py  cli.py  config.py  decision_store.py  decorators.py  event_log.py  hash.py  report.py  run.py
integrations/python/liminara/integrations/: __init__.py  langchain.py
integrations/python/tests/: conftest.py  test_artifact_store.py  test_cli.py  test_config.py  test_decision_store.py  test_decorators_decision.py  test_decorators_op.py  test_decorators_stacking.py  test_event_log.py  test_example_01.py  test_example_01_integration.py  test_golden_fixtures.py  test_hash.py  test_integration.py  test_langchain_callback.py  test_no_run_context.py  test_placeholder.py  test_rag_integration.py  test_report.py  test_run.py
provenance/: 2026-04-05-e20-main-merge.md
runtime/: .credo.exs  .formatter.exs  .gitignore  mix.exs
runtime/python/: pyproject.toml
runtime/python/src/: liminara_op_runner.py
runtime/python/src/ops/: echo.py  radar_cluster.py  radar_dedup.py  radar_embed.py  radar_fetch_rss.py  radar_fetch_web.py  radar_llm_dedup.py  radar_normalize.py  radar_rank.py  radar_summarize.py  test_context.py  test_crash.py  test_env_report.py  test_raise.py  test_recordable.py  test_reverse.py  test_side_effect.py  test_sleep.py  test_warning.py
runtime/python/src/providers/: embedding.py  embedding_mock.py  embedding_model2vec.py
runtime/python/tests/: test_op_runner.py  test_radar_cluster.py  test_radar_embed_dedup.py  test_radar_fetch.py  test_radar_llm_dedup.py  test_radar_normalize.py  test_radar_rank.py  test_radar_summarize.py
scripts/: cue-vet  extract-session-metadata.mjs  generate-provenance-full.mjs  generate_golden_fixtures.py  install-cue-hook  pre-commit-cue
skills/: architect.md  plan-milestones.md  release.md  start-milestone.md
templates/: session-log.md
work/: dead-code-report.md  decisions.md  gaps.md  graph.yaml  roadmap.md
(+747 files in other folders)
