[project]
name = "liminara"
version = "0.1.0"
description = "Python SDK for Liminara reproducible computation with EU AI Act compliance reporting"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "canonicaljson>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
langchain = [
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-chroma>=0.2",
    "langchain-community>=0.3",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
liminara = "liminara.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
