[project]
name = "liminara"
version = "0.1.0"
description = "Python SDK for Liminara — reproducible nondeterministic computation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "canonicaljson>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
langchain = [
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "fastembed>=0.4",
    "lancedb>=0.15",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "ty",
]

[project.scripts]
liminara = "liminara.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PT", "RUF", "SIM", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=liminara --cov-report=term-missing -m 'not integration'"
markers = ["integration: requires ANTHROPIC_API_KEY and --run-integration flag"]

[tool.ty.src]
exclude = ["examples/", "tests/test_example_01*.py"]

[tool.coverage.run]
source = ["liminara"]

[tool.coverage.report]
show_missing = true
