[project]
name = "liminara-ops"
version = "0.1.0"
description = "Python op runner for Liminara"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "lancedb>=0.6",
    "anthropic>=0.40",
    "numpy>=1.26",
    "model2vec>=0.4",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
